Configuration in demo

--- a/test/com/axiastudio/zoefx/demo/book.properties
+++ b/test/com/axiastudio/zoefx/demo/book.properties
@@ -1,3 +1,4 @@
 title="Book - ZoeFX Demo"
 searchcolumns=title
-criteriacolumns=title,description
+searchcriteria=title,description
+author.lookup=surname
