--- a/test/com/axiastudio/zoefx/demo/person.properties
+++ b/test/com/axiastudio/zoefx/demo/person.properties
@@ -1,5 +1,6 @@
 title=Person - ZoeFX Demo
 searchcolumns=name,surname
+searchcriteria=name,surname
 loans.reference=book
 loans.searchcolumns=title
 book.lookup=title
